[tool.poetry]
name = "navtools"
version = "0.0.1"
description = "A small package of tools for PNT development."
authors = ["Tanner Koza <kozatanner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "^5.14.1"
tqdm = "^4.65.0"
planar = {git = "https://github.com/srush/planar"}
scipy = "1.10"
laika = {path = "libs/laika", develop = true}
bagpy = "^0.5"
jupyter = "^1.0.0"
sympy = "^1.12"
pillow = "^10.0.0"
cffi = "^1.15.1"
gmplot = "^1.4.1"
pycurl = "^7.45.2"
hatanaka = "^2.8.1"
pycapnp = "^1.3.0"
atomicwrites = "^1.4.1"
importlib = "^1.0.4"
pymap3d = "^3.0.1"
skyfield = "^1.46"
codon-jit = "^0.1.7"
numba = "^0.57.1"
pyfftw = "^0.13.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.23.1"
nbformat = "^5.8.0"
ipympl = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
