[tool.poetry]
name = "navtools"
version = "0.0.1"
description = "a Python package of fundamental positioning, navigation, and timing (PNT) tools"
authors = ["Tanner Koza <kozatanner@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.60.0"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ipympl = "^0.9.3"
ipykernel = "^6.26.0"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
